# md2pt_jp_gui

./: .gitignore  CHANGELOG.md  README.md  gui.py  pyproject.toml
gui/: app.py
md2pt_jp/: cli.py  converter.py
tests/: test_converter.py
