[project]
name = "md2pt-jp"
version = "1.0.0"
description = "Convert Markdowned text to Plain text Japanese version"
authors = [
  { name = "takesobt", email = "takesobt@users.noreply.github.com" }
]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
    "tiktoken (>=0.9.0,<0.10.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
pyinstaller = "^6.13.0"

